c2rust-transpile/tests/snapshots/snapshots__transpile@overflow_128.c.2024.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/overflow_128.2024.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
#[unsafe(no_mangle)]
pub unsafe extern "C" fn supported_uint128(
    mut a: u128,
    mut b: u128,
    mut out: *mut u128,
) -> ::core::ffi::c_int {
    let (c2rust_result, c2rust_overflowed) = a.overflowing_add(b);
    *out = c2rust_result;
    return c2rust_overflowed as ::core::ffi::c_int;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn supported_int128(
    mut a: i128,
    mut b: i128,
    mut out: *mut i128,
) -> ::core::ffi::c_int {
    let (c2rust_result, c2rust_overflowed) = a.overflowing_mul(b);
    *out = c2rust_result;
    return c2rust_overflowed as ::core::ffi::c_int;
}
