c2rust-transpile/tests/snapshots/snapshots__transpile@pause.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/pause.rs
input_file: c2rust-transpile/tests/snapshots/pause.c
---
#![allow(
    dead_code,
    mutable_transmutes,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[no_mangle]
pub unsafe extern "C" fn pause() {
    ::core::hint::spin_loop();
}
