c2rust-transpile/tests/snapshots/snapshots__transpile@predefined.c.2021.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/predefined.2021.rs
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#![deny(unsafe_op_in_unsafe_fn)]
#[no_mangle]
pub unsafe extern "C" fn predefined() {
    unsafe {
        let mut line: ::core::ffi::c_int = 2 as ::core::ffi::c_int;
        let mut file_name: *const ::core::ffi::c_char =
            b"predefined.c\0".as_ptr() as *const ::core::ffi::c_char;
        let mut func: *const ::core::ffi::c_char =
            b"predefined\0".as_ptr() as *const ::core::ffi::c_char;
    }
}
#[no_mangle]
pub unsafe extern "C" fn extension_operator() -> *const ::core::ffi::c_char {
    unsafe {
        return b"const char *extension_operator()\0".as_ptr() as *const ::core::ffi::c_char;
    }
}
